# WhatsAppBot

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: release.yml
src/: main.cpp  neuralNetwork.cpp
src/include/: neuralNetwork.h
